--- a/Backend/PokeQuiz/quiz/src/main/resources/application.properties
+++ b/Backend/PokeQuiz/quiz/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=quiz
+
+# Server Config
+server.port=8082
+
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/pokequizdb
+spring.datasource.username=postgres
+spring.datasource.password=Raunak\@2005
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+#spring.jpa.hibernate.ddl-auto=validate
+
+
+# Redis Configuration
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
+# Logging
+logging.level.org.springframework=INFO
